Style improvements on smaller screens (#481): - Reduced Sidenav width (+reduced content margin) - Prevented extra scrollbar appearing next to tabs if they overflow - Added Zoom to World Map - Shortened quickbox texts on Information tab on server page.

--- a/Plan/src/main/resources/web/css/main.css
+++ b/Plan/src/main/resources/web/css/main.css
@@ -81,7 +81,6 @@
 
 .main-limiter {
     width: 100%;
-    height: 100%;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
@@ -157,24 +156,9 @@
         font-size: 19px;
     }
 }
-@media only screen and (max-width: 850px) {
-    header h1 {    
-        font-weight: 400;
-        font-size: 30px;
-    }
-}    
 @media only screen and (max-width: 780px) {    
     .scrollbar {
         overflow-x: auto;
         width: 100%;
     }
-    .nav-bar {
-        flex-direction: row;
-    }
-    .row {
-        flex-direction: column;
-    }
-    header p {
-        display: none;
-    }    
 }
